--- a/Main/SEToolbox/SEToolboxSetup/Product.wxs
+++ b/Main/SEToolbox/SEToolboxSetup/Product.wxs
@@ -90,9 +90,17 @@
               <Component Id='localeComponentZH' Guid='2598AD91-A20F-4D9B-A465-1C6D3E8CA941'>
                 <CreateFolder />
                 <File Id='localeFileZH' Name='SEToolbox.resources.dll' Source='$(var.SEToolbox.TargetDir)\zh\SEToolbox.resources.dll' DiskId='1' />
+                <File Id='localeFileUpdateZH' Name='SEToolboxUpdate.resources.dll' Source='$(var.SEToolbox.TargetDir)\zh\SEToolboxUpdate.resources.dll' DiskId='1' />
               </Component>
             </Directory>
             -->
+            <Directory Id='localeDirectoryDE' Name='de'>
+              <Component Id='localeComponentDE' Guid='12B7F102-2FCE-40D2-A8D4-DEF002675989'>
+                <CreateFolder />
+                <File Id='localeFileDE' Name='SEToolbox.resources.dll' Source='$(var.SEToolbox.TargetDir)\de\SEToolbox.resources.dll' DiskId='1' />
+                <File Id='localeFileUpdateDE' Name='SEToolboxUpdate.resources.dll' Source='$(var.SEToolbox.TargetDir)\de\SEToolboxUpdate.resources.dll' DiskId='1' />
+              </Component>
+            </Directory>
 
           </Directory>
         </Directory>
@@ -118,7 +126,7 @@
     <Property Id="APPLICATIONFOLDER">
       <RegistrySearch Id='SEToolboxRegistry' Type='raw' Root='HKLM' Key='Software\MidSpace\SEToolbox' Name='InstallDir' />
     </Property>
-    <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Launch Application when finished" />
+    <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="!(loc.LaunchProductOnFinish)" />
     <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1" />
     <Property Id="WixShellExecTarget" Value="[#file184705D6F44643D48E157FDD3FBF37D7]" />
     <CustomAction Id="LaunchApplication" BinaryKey="WixCA" DllEntry="WixShellExec" Impersonate="yes" />
@@ -211,6 +219,7 @@
       <!--
       <ComponentRef Id="localeComponentZH" />
       -->
+      <ComponentRef Id="localeComponentDE" />
     </Feature>
   </Product>
 
