--- a/Main/SEToolbox/SEToolbox/Views/ControlPlanet.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlPlanet.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:controls="clr-namespace:SEToolbox.Controls"
              xmlns:commands="clr-namespace:SEToolbox.Services"
              xmlns:converters="clr-namespace:SEToolbox.Converters"
@@ -72,7 +73,12 @@
 
             <TextBlock Grid.Row="4" Grid.Column="0" Margin="4 0 4 0" Text="{lex:Loc CtlPlanetName}"/>
             <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Name}"/>
-            <TextBlock Grid.Row="5" Grid.Column="0" Margin="4 0 4 0" Text="{lex:Loc CtlPlanetCenter}"/>
+            <Grid Grid.Row="5" Grid.Column="0" HorizontalAlignment="Stretch">
+                <TextBlock Margin="4 0 4 0" Text="{lex:Loc CtlPlanetCenter}"/>
+                <Button Command="{Binding CopyObjectGpsCommand}" ToolTip="{lex:Loc CtlPlanetMnuCopyGpsCenter}" HorizontalAlignment="Right" Margin="0 0 4 0">
+                    <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=target}"/>
+                </Button>
+            </Grid>
             <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center">
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{}{0:#,##0.0000}, {1:#,##0.0000}, {2:#,##0.0000}">
@@ -122,7 +128,8 @@
             <TextBlock Grid.Row="14" Grid.Column="0" Margin="4 0 4 0" Text="{lex:Loc CtlPlanetSpawnsFlora}"/>
             <TextBlock Grid.Row="14" Grid.Column="1" VerticalAlignment="Center" Text="{Binding SpawnsFlora}" />
             <TextBlock Grid.Row="15" Grid.Column="0" Margin="4 0 4 0" Text="{lex:Loc CtlPlanetShowGps}"/>
-            <TextBlock Grid.Row="15" Grid.Column="1" VerticalAlignment="Center" Text="{Binding ShowGPS}" />
+            <!--<TextBlock Grid.Row="15" Grid.Column="1" VerticalAlignment="Center" Text="{Binding ShowGPS}" />-->
+            <CheckBox Grid.Row="15" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding ShowGPS, Mode=TwoWay}" />
             <TextBlock Grid.Row="16" Grid.Column="0" Margin="4 0 4 0" Text="{lex:Loc CtlPlanetPlanetGenerator}"/>
             <TextBlock Grid.Row="16" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlanetGenerator}" />
         </Grid>
